[gd_scene load_steps=10 format=2]

[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/MapSelectionPanel/MapSelectionPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/Assets/WhiteLine_7x7.png" type="Texture" id=2]
[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/MapSummaryPanel/MapSummaryPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/WholeMapSelectionScreen.gd" type="Script" id=4]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/StartButton/MapSelection_StartButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/GameModeDescPanel/GameModeDescPanel.tscn" type="PackedScene" id=7]
[ext_resource path="res://PreGameHUDRelated/MapSelectionScreen/ModeSelectionPanelV2/ModeSelectionPanelV2.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[node name="WholeMapSelectionScreen" type="MarginContainer"]
margin_right = 960.0
margin_bottom = 540.0
mouse_filter = 2
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 940.0
margin_bottom = 520.0
mouse_filter = 2
custom_constants/separation = 8

[node name="TitleContainer" type="MarginContainer" parent="VBoxContainer"]
margin_left = 408.0
margin_right = 512.0
margin_bottom = 45.0
mouse_filter = 2
size_flags_horizontal = 6

[node name="LeftBorder" type="TextureRect" parent="VBoxContainer/TitleContainer"]
margin_right = 7.0
margin_bottom = 45.0
size_flags_horizontal = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="VBoxContainer/TitleContainer"]
margin_left = 97.0
margin_right = 104.0
margin_bottom = 45.0
size_flags_horizontal = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="VBoxContainer/TitleContainer"]
margin_right = 104.0
margin_bottom = 7.0
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="VBoxContainer/TitleContainer"]
margin_top = 38.0
margin_right = 104.0
margin_bottom = 45.0
size_flags_vertical = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TitleMarginer" type="MarginContainer" parent="VBoxContainer/TitleContainer"]
margin_right = 104.0
margin_bottom = 45.0
size_flags_horizontal = 6
custom_constants/margin_right = 34
custom_constants/margin_top = 14
custom_constants/margin_left = 34
custom_constants/margin_bottom = 14

[node name="Label" type="Label" parent="VBoxContainer/TitleContainer/TitleMarginer"]
margin_left = 34.0
margin_top = 14.0
margin_right = 70.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "Maps"

[node name="MapSelectionPanel" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_left = 125.0
margin_top = 53.0
margin_right = 795.0
margin_bottom = 303.0
size_flags_horizontal = 6

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 311.0
margin_right = 920.0
margin_bottom = 465.0
mouse_filter = 2
custom_constants/margin_right = 30
custom_constants/margin_top = 10
custom_constants/margin_left = 30

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 30.0
margin_top = 10.0
margin_right = 890.0
margin_bottom = 154.0
custom_constants/separation = 0

[node name="ModeSelectionPanelV2" parent="VBoxContainer/MarginContainer/HBoxContainer2" instance=ExtResource( 8 )]
margin_right = 164.0
margin_bottom = 144.0
size_flags_horizontal = 1

[node name="GameModeDescPanel" parent="VBoxContainer/MarginContainer/HBoxContainer2" instance=ExtResource( 7 )]
margin_left = 164.0
margin_right = 364.0
margin_bottom = 144.0
rect_min_size = Vector2( 200, 100 )
custom_constants/margin_left = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 30.0
margin_top = 10.0
margin_right = 890.0
margin_bottom = 154.0
mouse_filter = 2
size_flags_vertical = 3

[node name="MapSummaryPanel" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_left = 660.0
margin_top = 37.0
margin_right = 860.0
margin_bottom = 144.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 10
size_flags_vertical = 10

[node name="MapSelection_StartButton" parent="VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 710.0
margin_top = 52.0
margin_right = 860.0
margin_bottom = 144.0
size_flags_horizontal = 10
size_flags_vertical = 10

[node name="ContainerForSelectLists" type="Control" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 940.0
margin_bottom = 520.0
mouse_filter = 2
